[gd_scene load_steps=3 format=3 uid="uid://drt3u15k4mjxe"]

[ext_resource type="Script" uid="uid://cb8yfk37hp1n8" path="res://scripts/GUI/parts/part_button.gd" id="1_q0hjs"]
[ext_resource type="Texture2D" uid="uid://5yrrjqbhfw40" path="res://graphics/images/HUD/parts/PartSelected.png" id="2_1j71w"]

[node name="PartButton" type="TextureButton"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1104.0
offset_bottom = -600.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
toggle_mode = true
action_mode = 0
texture_pressed = ExtResource("2_1j71w")
texture_hover = ExtResource("2_1j71w")
script = ExtResource("1_q0hjs")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="toggled" from="." to="." method="_on_toggled"]
